--- a/package.json
+++ b/package.json
@@ -5,32 +5,37 @@
   "publishConfig": {
     "access": "public"
   },
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/@types/index.d.ts",
   "sideEffects": false,
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rm -rf dist && rollup -c",
     "test": "ava",
     "prettier": "prettier --write .",
-    "prettier:check": "prettier --check ."
+    "prettier:check": "prettier --check .",
+    "check-types": "tsc",
+    "generate-types": "tsc --noEmit false --emitDeclarationOnly"
   },
   "devDependencies": {
+    "@ava/babel": "1.0.1",
+    "@babel/preset-typescript": "7.9.0",
     "@csvenke/prettier-config": "3.0.0",
-    "@rollup/plugin-commonjs": "^11.0.2",
-    "@rollup/plugin-typescript": "^4.0.0",
     "@types/node": "13.11.0",
     "ava": "3.6.0",
-    "jest": "25.3.0",
     "prettier": "2.0.4",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup": "^2.3.4",
-    "ts-node": "8.8.2",
-    "tslib": "^1.11.1",
-    "typescript": "^3.8.3"
+    "rollup": "2.3.4",
+    "rollup-plugin-babel": "4.4.0",
+    "rollup-plugin-terser": "5.3.0",
+    "rollup-plugin-typescript2": "0.27.0",
+    "typescript": "3.8.3"
   },
   "prettier": "@csvenke/prettier-config",
   "ava": {
     "verbose": true,
-    "extensions": [
-      "js"
-    ]
+    "babel": true
   }
 }
