--- a/.github/workflows/master-workflow.yml
+++ b/.github/workflows/master-workflow.yml
@@ -36,6 +36,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12
+      - name: Installing dependencies
+        run: yarn install
       - name: Building project
         run: yarn build
       - name: Release
