--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
     "test": "ava",
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
-    "check-types": "tsc",
-    "generate-types": "tsc --noEmit false --emitDeclarationOnly"
+    "check-types": "tsc"
   },
   "devDependencies": {
     "@ava/babel": "1.0.1",
     "@babel/preset-typescript": "7.9.0",
+    "@commitlint/cli": "8.3.5",
+    "@commitlint/config-conventional": "8.3.4",
     "@csvenke/prettier-config": "3.0.0",
     "@types/node": "13.11.0",
     "ava": "3.6.0",
+    "husky": "4.2.5",
+    "lint-staged": "10.1.3",
     "prettier": "2.0.4",
     "rollup": "2.3.4",
     "rollup-plugin-babel": "4.4.0",
@@ -37,5 +40,19 @@
   "ava": {
     "verbose": true,
     "babel": true
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "tsc"
+    ],
+    "*.{js,ts,json,yml}": [
+      "prettier --write"
+    ]
   }
 }
