chore: update lint-staged config

--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
   },
   "lint-staged": {
     "*.ts": [
-      "tsc"
+      "tsc -p tsconfig.json"
     ],
-    "*.{js,ts,json,yml}": [
+    "*.{js,ts,json,yml,md}": [
       "prettier --write"
     ]
   }
