--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   },
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
-  "types": "dist/@types/index.d.ts",
-  "sideEffects": false,
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
+  "sideEffects": false,
   "scripts": {
     "build": "rm -rf dist && rollup -c",
     "test": "ava",
+    "pretest": "yarn build",
     "prettier": "prettier --write .",
     "prettier:check": "prettier --check .",
     "check-types": "tsc"
@@ -48,9 +49,6 @@
     }
   },
   "lint-staged": {
-    "*.ts": [
-      "tsc -p tsconfig.json"
-    ],
     "*.{js,ts,json,yml,md}": [
       "prettier --write"
     ]
