--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "esnext",
     "moduleResolution": "node",
     "declaration": true,
-    "declarationDir": "dist/@types",
+    "declarationDir": "dist",
     "allowJs": true,
     "noEmit": true,
     "strict": true,
