chore: update package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@csvenke/compose-rules",
+  "description": "Simple helper functions for writing composable business rules",
   "version": "0.0.1",
   "license": "MIT",
+  "repository": {
+    "url": "https://github.com/csvenke/compose-rules"
+  },
   "publishConfig": {
     "access": "public"
   },
