test: add writing tests in typescript

--- a/package.json
+++ b/package.json
@@ -44,7 +44,11 @@
   "prettier": "@csvenke/prettier-config",
   "ava": {
     "verbose": true,
-    "babel": true
+    "babel": {
+      "extensions": [
+        "ts"
+      ]
+    }
   },
   "husky": {
     "hooks": {
