--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "prettier": "prettier --write .",
     "check-prettier": "prettier --check .",
     "check-types": "tsc",
-    "check-all": "yarn check-prettier && yarn check-types"
+    "check-all": "yarn check-prettier && yarn check-types",
+    "docs": "rm -rf docs && typedoc --tsconfig tsconfig.json"
   },
   "devDependencies": {
     "@ava/babel": "1.0.1",
@@ -50,6 +51,7 @@
     "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-terser": "5.3.0",
     "rollup-plugin-typescript2": "0.27.0",
+    "typedoc": "0.17.0-3",
     "typescript": "3.8.3"
   },
   "prettier": "@csvenke/prettier-config",
